--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,8 +1,7 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: "Introduction"
+description: "Welcome to the Swift Bot documentation! Here, you'll find everything you need to set up, configure, and maximize Swift Bot’s features for roleplay moderation and shift management. Whether you're a beginner or an advanced user, this guide will help you get started quickly and efficiently."
 icon: "book-open"
-
 ---
 
 # Coming Soon
