--- a/plugins/infraction.mdx
+++ b/plugins/infraction.mdx
@@ -13,17 +13,21 @@ To set up the Infraction module, first use the `/config` command to access the c
 You must configure the staff role and management under the guild settings options **(ONLY Owners can use this option).**
 </Note>
 
+<Warning>
+User's must have the Management Role to execute/manage an Infraction
+</Warning>
+
 ## Commands
 <Card title="">
 <CardGroup cols={3}>
   <Card title="Infraction Issue" icon="square-1">
-NEED TO BE DONE
+Issues & Adds a Infraction to a User's record
   </Card>
   <Card title="Infraction List" icon="square-2">
-NEED TO BE DONE 
+Lists all Infraction Records linked with a User
  </Card>
   <Card title="Infraction Remove" icon="square-3">
-NEED TO BE DONE 
+  Removes a Linked Infraction Record from a User
  </Card>
 </CardGroup>
 </Card>
