--- a/introduction.mdx
+++ b/introduction.mdx
@@ -4,4 +4,8 @@ description: "Welcome to the Swift Bot documentation! Here, you'll find everythi
 icon: "book-open"
 ---
 
+<Tip>
+We highly suggest the purchase of an ER:LC API Key for your guild. Many of our modules are integrated with this API Key.
+</Tip>
+
 # Coming Soon
