--- a/legal/privacy-policy.mdx
+++ b/legal/privacy-policy.mdx
@@ -1,8 +1,103 @@
 ---
 title: Privacy Policy
-description: "Your privacy matters. This page details how Swift Bot collects, uses, and protects your data while ensuring transparency and security."
+description: "Your privacy is important to us. This Privacy Policy explains how Swift Bot collects, uses, stores, and safeguards your data. By using Swift Bot, you agree to the terms outlined below."
 icon: "shield"
+
+---
+**Effective Date:** April 5, 2025  
+**Last Updated:** April 5, 2025  
 ---
 
-**Effective Date:** March 28, 2025  
-This Privacy Policy explains what data Swift Bot collects, why it is collected, how it is used, and what rights you have regarding your data. We are committed to maintaining transparency and ensuring that your data is handled responsibly.  
+## 1. Key Definitions
+
+| Term               | Meaning                                                   |
+|--------------------|-----------------------------------------------------------|
+| **Service**        | Swift Bot and all related features and plugins.           |
+| **User**           | Any Discord member who interacts with Swift Bot.          |
+| **Data Controller**| The Swift Bot Development Team.                           |
+| **Processing**     | Any use of collected data (e.g., storing, analyzing).     |
+| **Premium User**   | A user who has made a paid transaction for features.      |
+
+---
+
+## 2. Data We Collect
+
+| Category              | Examples                                                      | Purpose                         | Retention                  |
+|------------------------|---------------------------------------------------------------|----------------------------------|-----------------------------|
+| **Basic Identifiers**  | Discord User ID, Username, Server ID                          | Account linking, core features   | Until user or server deletion |
+| **Premium Purchase Info** | Purchase Timestamp, Payment Mode (PayPal, etc), Roblox ID & Username, PayPal Email | Verifying & managing premium access | Up to 5 years (for legal purposes) |
+| **Operational Metrics** | Command usage, button clicks, timestamps                     | Improve bot functionality        | 30 days                    |
+| **Error Logs**         | Interaction errors, invalid inputs                            | Debugging & bot reliability      | 7 days                     |
+
+---
+
+## 3. Youth Protection Policy
+
+We do not knowingly collect data from users under 13 (or the minimum age in your country). If we identify an underage account:
+
+- Access will be restricted.
+- All data will be flagged and deleted within 30 days.
+- We do **not** request guardian verification or government ID for privacy and protection.
+
+---
+
+## 4. Your Rights
+
+| Right                     | Description                                                                 |
+|---------------------------|-----------------------------------------------------------------------------|
+| **Access**                | Request a summary of your data stored with us.                              |
+| **Correction**            | Request a fix for inaccurate data.                                          |
+| **Deletion**              | Request complete data removal, excluding records required by law.           |
+| **Data Portability**      | Request an export of your data in a readable format.                        |
+
+### How to Request
+
+To exercise your rights, email us at: `legal@swiftbot.dev` with:
+
+- Subject: `DATA REQUEST - [Your Discord Tag]`
+- Attach: Screenshot of your Discord profile (with tag)
+
+Processing may take up to 30 business days.
+
+---
+
+## 5. Third Parties
+
+| Party            | Purpose                                            | Safeguards                                             |
+|------------------|----------------------------------------------------|--------------------------------------------------------|
+| **MongoDB**       | Data storage                                       | AES-256 encryption, IP-restricted access               |
+| **Roblox**        | Purchase verification (if applicable)              | Only used for premium validation                      |
+| **PayPal**        | Payment confirmation (if used)                     | Email retained securely for lookup only               |
+| **Discord**       | Authentication and user metadata                   | OAuth-protected, no message access                    |
+| **PRC API**       | In-game data access from ER:LC                     | Used securely for personalized data (e.g., username, ID) |
+| **Designify API** & **Duckybot API** | To retrieve linked Roblox account | Access limited to shared projects, no extra data stored |
+
+---
+
+## 6. Security & Breach Protocol
+
+| Layer                    | Details                                                                 |
+|--------------------------|-------------------------------------------------------------------------|
+| **Data Encryption**      | All data is encrypted at rest (AES-256) and in-transit (TLS 1.3).       |
+| **Access Control**       | Only authorized developers can access production data.                  |
+| **Audit & Monitoring**   | Regular permission audits and anomaly detection.                        |
+| **Backups**              | Daily encrypted backups with off-site redundancy.                       |
+| **Incident Response**    | Breach notifications within 72 hours if user data is affected.          |
+| **User Alert Channels**  | Discord announcements and optional email follow-up if needed.           |
+| **Bug Reporting**        | Security issues can be reported via `legal@swiftbot.dev`.               |
+
+---
+
+## 7. Policy Updates
+
+We may update this policy periodically. Major updates will be announced in our [support Discord](https://discord.gg/swiftbot).
+
+---
+
+## 8. Contact
+
+For privacy inquiries or requests:
+- Email: `legal@swiftbot.dev`
+- Discord: `fwaurxra` (Bot Owner)
+
+By continuing to use Swift Bot, you confirm your agreement with this policy.
