--- a/miscellaneous/change-logs.mdx
+++ b/miscellaneous/change-logs.mdx
@@ -14,8 +14,21 @@ icon: "scroll"
 
 
 
-<Update label="2024/04/10" description="Version: 0.1">
-# Coming Soon
+<Update label="2024/04/5" description="Version: 0.1">
+## Giveaway Plugin
+We’ve introduced a brand new giveaway plugin that allows you to easily run giveaways with fully customizable embeds! 
+- Customize the embed with your own content
+- Use dynamic variables such as `{guild-name}`, `{author-icon}`, and [more](https://swift-c56e4cad.mintlify.app/miscellaneous/variables#giveaway-variables)
+- Adjust the appearance of the embed with colors, descriptions, and titles
+
+## Logging Plugin
+Introducing the Logging Plugin! Now you can track all your Discord events in a way that’s faster and easier than ever before.
+- Track important events like user joins, message deletions, and more
+- Log data in an organized and easy-to-read format
+- Set up automatic logging for a wide variety of events with just a few commands
+
+## Bug Fixes and Improvements
+- A lot of bugs have been fixed and several commands have been improved, including the Custom Embeds variable bug, Infraction ID error, and more.
 </Update>
 
 
