--- a/miscellaneous/change-logs.mdx
+++ b/miscellaneous/change-logs.mdx
@@ -29,6 +29,9 @@ Introducing the Logging Plugin! Now you can track all your Discord events in a w
 
 ## Bug Fixes and Improvements
 - A lot of bugs have been fixed and several commands have been improved, including the Custom Embeds variable bug, Infraction ID error, and more.
+
+<Note>If you've encountered any bugs, feel free to report them to us in the [#bugs-report](https://discord.com/channels/1275507213783535707/1275507219286458505) channel.
+</Note>
 </Update>
 
 
