--- a/miscellaneous/change-logs.mdx
+++ b/miscellaneous/change-logs.mdx
@@ -18,7 +18,7 @@ icon: "scroll"
 ## Giveaway Plugin
 We’ve introduced a brand new giveaway plugin that allows you to easily run giveaways with fully customizable embeds! 
 - Customize the embed with your own content
-- Use dynamic variables such as `{guild-name}`, `{author-icon}`, and [more](https://swift-c56e4cad.mintlify.app/miscellaneous/variables#giveaway-variables)
+- Use dynamic variables such as `{guild-name}`, `{author-icon}`, and [more](https://docs.swiftbot.site/miscellaneous/variables#giveaway-variables)
 - Adjust the appearance of the embed with colors, descriptions, and titles
 
 ## Logging Plugin
