Documentation edits made through Mintlify web editor

--- a/miscellaneous/change-logs.mdx
+++ b/miscellaneous/change-logs.mdx
@@ -2,27 +2,24 @@
 title: Change Logs
 description: "The Change Log page provides a chronological record of all updates, improvements, and fixes made to the system. It serves as a transparent history of modifications, ensuring users are always informed about the latest changes."
 icon: "scroll"
-
 ---
 
-### What You’ll Find in the Change Log:
+### What You'll Find in the Change Log:
 - **Version Releases:** A breakdown of each software update.
 - **New Features:** Highlights of recently added functionalities.
 - **Bug Fixes:** Details on resolved issues and improvements.
 - **Performance Enhancements:** Optimizations for better efficiency.
 - **Deprecations & Removals:** Information on features that have been discontinued.
 
-
-
 <Update label="2024/04/5" description="Version: 0.1">
 ## Giveaway Plugin
-We’ve introduced a brand new giveaway plugin that allows you to easily run giveaways with fully customizable embeds! 
+We've introduced a brand new giveaway plugin that allows you to easily run giveaways with fully customizable embeds! 
 - Customize the embed with your own content
 - Use dynamic variables such as `{guild-name}`, `{author-icon}`, and [more](https://docs.swiftbot.site/miscellaneous/variables#giveaway-variables)
 - Adjust the appearance of the embed with colors, descriptions, and titles
 
 ## Logging Plugin
-Introducing the Logging Plugin! Now you can track all your Discord events in a way that’s faster and easier than ever before.
+Introducing the Logging Plugin! Now you can track all your Discord events in a way that's faster and easier than ever before.
 - Track important events like user joins, message deletions, and more
 - Log data in an organized and easy-to-read format
 - Set up automatic logging for a wide variety of events with just a few commands
@@ -30,8 +27,7 @@ Introducing the Logging Plugin! Now you can track all your Discord events in a w
 ## Bug Fixes and Improvements
 - A lot of bugs have been fixed and several commands have been improved, including the Custom Embeds variable bug, Infraction ID error, and more.
 
-<Note>If you've encountered any bugs, feel free to report them to us in the [#bugs-report](https://discord.com/channels/1275507213783535707/1275507219286458505) channel.
+<Note>
+If you've encountered any bugs, feel free to report them to us in the [#bugs-report](https://discord.com/channels/1275507213783535707/1275507219286458505) channel.
 </Note>
 </Update>
-
-
