--- a/miscellaneous/variables.mdx
+++ b/miscellaneous/variables.mdx
@@ -75,9 +75,9 @@ icon: "code"
   <Accordion title="Role Variables" icon="user">
     | Variable          | Description |  
     |----------------------|----------------------------------------------|  
-    | `{role_name}`  | Display the name of the role the user pinged. (e.g., `Owner`). |  
-    | `{role_id}` | Displays role id of the role the user pinged. (e.g., `123456789012345678`). |  
-    | `{role_mention}`     | Display a mention of the role the user pinged. (e.g., `@Owner`). |  
+    | `{role-name}`  | Display the name of the role the user pinged. (e.g., `Owner`). |  
+    | `{role-id}` | Displays role id of the role the user pinged. (e.g., `123456789012345678`). |  
+    | `{role-mention}`     | Display a mention of the role the user pinged. (e.g., `@Owner`). |  
   </Accordion>
 
 </AccordionGroup>
